@@ -680,6 +680,7 @@ line_antialias_help		Enable line antialiasing
 poly_antialias_help		Enable polygon antialiasing
 persp_correct_help		Enable perspective correction
 alpha_blend_help		Enable alpha blending
+zone_alpha_toggle_help		This is XORd with ALPHA_BLEND to determine the way to draw zones
 smooth_shading_help		Enable smooth shading
 text_out_help			Enable console text output
 console_columns_help    Number of characters in each line of console output
